Añadimos la opción de ver gráficos de la biblioteca propia
Si tenemos la integración con calibre activada